--- a/views/dashboard/settings/billing.ejs
+++ b/views/dashboard/settings/billing.ejs
@@ -278,19 +278,15 @@
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm">
                     <% if (purchase.invoiceUrl) { %>
-
-                      href="<%= purchase.invoiceUrl %>"
-                        target="_blank"
-                        class="text-orange-600 hover:text-orange-900"
-                        title="Download Invoice"
-                        >
+                      <a href="<%= purchase.invoiceUrl %>" target="_blank" class="text-orange-600 hover:text-orange-900"
+                        title="Download Invoice">
                         <i class="fas fa-download"></i>
-                        </a>
-                        <% } else { %>
-                          <span class="text-gray-300">
-                            <i class="fas fa-download"></i>
-                          </span>
-                          <% } %>
+                      </a>
+                      <% } else { %>
+                        <span class="text-gray-300">
+                          <i class="fas fa-download"></i>
+                        </span>
+                        <% } %>
                   </td>
                 </tr>
                 <% }); %>
